# TauFirmwareLibrary

./: .gitignore  CMakeLists.txt  sensors_simulation.slxc
app/inc/: FreeRTOSConfig.h
app/src/: main.c
app/src/tasks/: read_barometer_task.c
bsp/inc/: sensors.h
bsp/src/: sensors.c
firmware/: CMakeLists.txt
firmware/app/src/: main.c
firmware/bsp/inc/pc/: udp.h
firmware/bsp/src/pc/: udp.c
firmware/drivers/bmp280/inc/: bmp280.h  bmp280_config.h  bmp280_definitions.h  bmp280_driver.h  bmp280_error.h  bmp280_mock.h
firmware/drivers/bmp280/src/: bmp280.c  bmp280_driver.c  bmp280_mock.c
firmware/os/pc/: freertos_hooks.c
firmware/pal/inc/: sensors.h
firmware/pal/src/: sensors.c
firmware/tasks/inc/: read_barometer_task.h
firmware/tasks/src/: read_barometer_task.c
slprj/_jitprj/: jitEngineAccessInfo.mat  sL5V4X6ydHA5tOl6VPEe8xF.l  sL5V4X6ydHA5tOl6VPEe8xF.mat  sOTkBrYQK8uoYhLKeZMCoYH.l  sOTkBrYQK8uoYhLKeZMCoYH.mat  sR9Tou25qHLk8tgwCWCt88G.l  sR9Tou25qHLk8tgwCWCt88G.mat  sVMwe690ucEGGXKvjBDTkvD.l  sVMwe690ucEGGXKvjBDTkvD.mat  sYOnDj1GWf3l9bNl87LRqH.l  sYOnDj1GWf3l9bNl87LRqH.mat  sp0C13uTGjB3ZFtK6FXktOB.l  sp0C13uTGjB3ZFtK6FXktOB.mat
slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  sL5V4X6ydHA5tOl6VPEe8xF.mat  sOTkBrYQK8uoYhLKeZMCoYH.mat  sR9Tou25qHLk8tgwCWCt88G.mat  sVMwe690ucEGGXKvjBDTkvD.mat  sYOnDj1GWf3l9bNl87LRqH.mat  seqwJrv2yXUXdWj7nZL9TD.mat  sp0C13uTGjB3ZFtK6FXktOB.mat
slprj/_sfprj/precompile/: 1K7HWcNYitYQib1gXheJYD.mat  7QNWGWLlWOpFjMJBk6wZ1F.mat  DTS0ANXaqKRbnLmVhhgjtD.mat  Ob9B17wkxYNDaYRdbHMtRB.mat  autoInferAccessInfo.mat  iuAgo5TdfxbDwjhyzRy7OG.mat  sTAAtC2S0RyPrYDQjVjAFD.mat
slprj/_sfprj/sensors_simulation/: amsi_serial.mat
software/: main_simu.asv  main_simu.m  sensors_simulation.slx  sensors_simulation.slxc
software/sensors_simu/: bmp280_model.m
software/slprj/_jitprj/: jitEngineAccessInfo.mat  s7XAg9K5vPLhNPc9dcbiUdF.l  s7XAg9K5vPLhNPc9dcbiUdF.mat  sGA5LvvBMYqlhPTbYFSD7eH.l  sGA5LvvBMYqlhPTbYFSD7eH.mat  sOByWUAK4RUIXjiYytmKOME.l  sOByWUAK4RUIXjiYytmKOME.mat  sPYpXjYDCQVw9afPPnLiUc.l  sPYpXjYDCQVw9afPPnLiUc.mat  sRhSo2cLPupwUXtzlE4SOZG.l  (+10 more)
(+40 files in other folders)
